refactor(qannotate nanno): use long to store chr and position when interrogating annotation position
The hope is that by creating fewer objects, it will be quicker (and simpler) when comparing
positions in qanannotate's nanno